# sahara-plugin-cdh

./: .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst
doc/source/user/: cdh-plugin.rst  index.rst
releasenotes/source/: conf.py  index.rst
sahara/plugins/cdh/: edp_engine.py
sahara_plugin_cdh/: i18n.py
sahara_plugin_cdh/locale/de/LC_MESSAGES/: sahara_plugin_cdh.po
sahara_plugin_cdh/locale/en_GB/LC_MESSAGES/: sahara_plugin_cdh.po
sahara_plugin_cdh/locale/id/LC_MESSAGES/: sahara_plugin_cdh.po
sahara_plugin_cdh/plugins/cdh/: abstractversionhandler.py  cloudera_utils.py  commands.py  config_helper.py  confighints_helper.py  db_helper.py  edp_engine.py  exceptions.py  health.py  plugin.py  plugin_utils.py  validation.py  versionfactory.py
sahara_plugin_cdh/plugins/cdh/client/: api_client.py  clusters.py  cms.py  hosts.py  http_client.py  resource.py  role_config_groups.py  roles.py  services.py  types.py  users.py
sahara_plugin_cdh/plugins/cdh/v5_11_0/: cloudera_utils.py  config_helper.py  deploy.py  edp_engine.py  images.py  plugin_utils.py  validation.py  versionhandler.py
sahara_plugin_cdh/plugins/cdh/v5_13_0/: cloudera_utils.py  config_helper.py  deploy.py  edp_engine.py  images.py  plugin_utils.py  validation.py  versionhandler.py
sahara_plugin_cdh/plugins/cdh/v5_7_0/: cloudera_utils.py  config_helper.py  deploy.py  edp_engine.py  images.py  plugin_utils.py  validation.py  (+1 more)
sahara_plugin_cdh/tests/: __init__.py
(+47 files in other folders)
