[metadata]
name = sahara-plugin-cdh
summary = CDH Plugin for Sahara Project
description-file = README.rst
license = Apache Software License
python-requires = >=3.8
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/

[files]
packages =
    sahara_plugin_cdh

[entry_points]
sahara.cluster.plugins =
    cdh     = sahara_plugin_cdh.plugins.cdh.plugin:CDHPluginProvider

[compile_catalog]
directory = sahara_plugin_cdh/locale
domain = sahara_plugin_cdh

[update_catalog]
domain = sahara_plugin_cdh
output_dir = sahara_plugin_cdh/locale
input_file = sahara_plugin_cdh/locale/sahara_plugin_cdh.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sahara_plugin_cdh/locale/sahara_plugin_cdh.pot
